hover color contrast is fixed for get in touch button

--- a/style.css
+++ b/style.css
@@ -434,8 +434,8 @@ div.skillList h4 {
 }
 
 .get-resume:hover {
-  background: #001aff;
-  color: white;
+  background: #ffffff;
+  color: rgb(0, 0, 0);
   box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
 }
 
@@ -942,8 +942,8 @@ input::placeholder {
   }
 
   .get-resume:hover {
-    background: #001aff;
-    color: white;
+    background: #ffffff;
+    color: rgb(0, 0, 0);
     box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
   }
 
